--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <body>
     <nav class="navigationbar">
         <div class="navtextblocks">
-            <a class="navtext" href="about.html">About</a>
+            <a class="navtext" id="about" href="about.html">About</a>
             <a class="navtext" href="faq.html">F.A.Q</a>
             <a class="navtext" href="sociallinks.html">Social Media</a>
         </div>
