--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <nav class="navigationbar">
         <div class="navtextblocks">
             <a class="navtext" href="about.html">About</a>
-            <a class="navtext" href="faq.html">F.A.Q</a>
+            <a class="navtext" id="faq" href="faq.html">F.A.Q</a>
             <a class="navtext" href="sociallinks.html">Social Media</a>
         </div>
         <p><a id="title" href="index.html">RBX.BANKS</a></p>   
