--- a/sociallinks.html
+++ b/sociallinks.html
@@ -18,7 +18,7 @@
             
             <a class="navtext" href="about.html">About</a>
             <a class="navtext" href="faq.html">F.A.Q</a>
-            <a class="navtext" href="sociallinks.html">Social Media</a>
+            <a class="navtext" id="social" href="sociallinks.html">Social Media</a>
         </div>
         <p><a id="title" href="index.html">RBX.BANKS</a></p>    
     </nav>    
